Add meta data and connect css file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mosaic</title>
+    <meta name="description" content="Personalized gifts and souvenirs and handcrafts for all occasions">
+    <meta name="keywords" content="Personalized, gifts, souvenirs, persents, handcrafts">
+
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1>Hello World</h1>
+
 </body>
 </html>
