Add main structure for home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <head>header content</head>
+    <section>Main image</section>
+    <section>gifts</section>
+    <section>gallery</section>
+    <section>reviews</section>
+    <footer>soial links</footer>
 
 </body>
 </html>
