Add basic header structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <head>header content</head>
+    <header>
+        <div class="hero">
+            <nav>
+                <h2 class="logo">MOSAIC</h2>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Gifts</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <section>Main image</section>
     <section>gifts</section>
     <section>gallery</section>
