Style navigation links

--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
 </head>
 <body>
     <header>
-        <div class="hero">
-            <nav>
-                <h2 class="logo">MOSAIC</h2>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Gifts</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Reviews</a></li>
-                </ul>
-            </nav>
-        </div>
+            <h1 id="logo">Mosaic Gifts</h1>
+        
+        <nav id="menu">
+            <ul>
+                
+                <li>
+                    <a href="#">Gifts</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Reviews</a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <section>Main image</section>
     <section>gifts</section>
     <section>gallery</section>
