--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-            <h1 id="logo">Mosaic Gifts</h1>
+            <h1 id="logo">Mosaic <span>Gifts</h1>
         
         <nav id="menu">
             <ul>
@@ -33,7 +33,9 @@
         </nav>
     </header>
 
-    <section>Main image</section>
+    <section>
+       <div id="hero-image"></div>
+    </section>
     <section>gifts</section>
     <section>gallery</section>
     <section>reviews</section>
