--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
     <section>
        <div id="hero-image"></div>
+       <div id="cover-text">
+           <h2>Mosaic Gifts</h2>
+           <h3>Treat someone special to a personalised gift for any occasion!</h3>
+       </div>
     </section>
     <section>gifts</section>
     <section>gallery</section>
