Add cover photo and style

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </nav>
     </header>
 
-    <section>
+    <section id="hero-outer">
        <div id="hero-image"></div>
        <div id="cover-text">
-           <h2>Mosaic Gifts</h2>
+           <h2>Mosaic <span>Gifts</span></h2>
+           <br>
            <h3>Treat someone special to a personalised gift for any occasion!</h3>
        </div>
     </section>
