add content to about us

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Reviews</a>
+                    <a href="#">About Us</a>
                 </li>
                 <li>
                     <a href="#">Home</a>
@@ -37,11 +37,23 @@
        <div id="hero-image"></div>
        <div id="cover-text">
            <h2>Mosaic <span>Gifts</span></h2>
-           <br>
+           <hr>
            <h3>Treat someone special to a personalised gift for any occasion!</h3>
        </div>
     </section>
-    <section>gifts</section>
+    <section id="about">
+        <div id="about-image"></div>
+            
+            <div class="about-content">
+                <h2>About Us</h2>
+                <h5>Personalized Gifts</h5>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio libero illo ad repellat
+                    quas ullam tenetur porro facilis quis dolorum labore culpa, cupiditate adipisci non maxime
+                    deserunt, ipsa dolores ratione!
+                </p>
+            </div>
+    </section>
     <section>gallery</section>
     <section>reviews</section>
     <footer>soial links</footer>
