style about us content

--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
        </div>
     </section>
     <section id="about">
-        <div id="about-image"></div>
-            
-            <div class="about-content">
-                <h2>About Us</h2>
-                <h5>Personalized Gifts</h5>
-                <p>
+        <div id="main">
+            <div id="about-image"></div>  
+                <div class="about-content">
+                  <h2>About Us</h2>
+                  <h5>Personalized <span>Gifts</span></h5>
+                  <hr>
+                  <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio libero illo ad repellat
                     quas ullam tenetur porro facilis quis dolorum labore culpa, cupiditate adipisci non maxime
                     deserunt, ipsa dolores ratione!
-                </p>
-            </div>
+                  </p>
+                </div>
+        </div>
     </section>
     <section>gallery</section>
     <section>reviews</section>
