Add footer and social media links and icons

--- a/index.html
+++ b/index.html
@@ -56,9 +56,60 @@
                 </div>
         </div>
     </section>
-    <section>gallery</section>
-    <section>reviews</section>
-    <footer>soial links</footer>
+
+    <div class="gifts">
+        <div class="title">
+            <h2> Gifts </h2>
+        </div>
+
+        <div class="box">
+            <div class="card">
+                <i class="fas fa-child"></i>
+                <h5> Him </h5>
+                <div class="box-content">
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis perspiciatis quis dignissimos a similique modi pariatur autem, hic recusandae explicabo nisi dolo
+                        r labore voluptatibus vitae reprehenderit, debitis voluptatem! Tempore, quibusdam!
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-female"></i>
+                <h5> Her </h5>
+                <hr>
+                <div class="box-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias nemo ea corporis dicta hic recusandae unde magni, excepturi sed maxime 
+                        non repellat distinctio consequatur commodi quis saepe, voluptatibus velit!
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-child"></i>
+                <h5> Kids </h5>
+                <hr>
+                <div class="box-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem rerum corporis dignissimos quam unde esse quos et
+                       aliquam tenetur. Enim asperiores necessitatibus eveniet ratione, tenetur nulla non eaque inventore?
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <footer>
+        <p> Follow us on social media</p>
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+        </div>
+    </footer>
+
+     <!-- font awesome script -->
+     <script src="https://kit.fontawesome.com/d3defc2221.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
