Restyle gift section

--- a/index.html
+++ b/index.html
@@ -57,47 +57,66 @@
         </div>
     </section>
 
-    <div class="gifts">
-        <div class="title">
-            <h2> Gifts </h2>
+
+
+        <div class="flip-main">
+            <div class="gifts-title">
+                <h2>Gifts</h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                            </div>
+                            <div class="filp-card-back">
+                                <div class="text">
+                                    <h2> Him</h2>
+                                    <p>Lorem ipsum dolor sit amet c</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                            </div>
+                            <div class="filp-card-back">
+                                <div class="text">
+                                    <h2> Him</h2>
+                                    <p>Lorem ipsum dolor sit amet con</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                            </div>
+                            <div class="filp-card-back">
+                                <div class="text">
+                                    <h2> Him</h2>
+                                    <p>Lorem ipsum dolor sit amet consec</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+            
+
+                </div>
+            </div>
         </div>
+  
 
-        <div class="box">
-            <div class="card">
-                <i class="fas fa-child"></i>
-                <h5> Him </h5>
-                <div class="box-content">
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis perspiciatis quis dignissimos a similique modi pariatur autem, hic recusandae explicabo nisi dolo
-                        r labore voluptatibus vitae reprehenderit, debitis voluptatem! Tempore, quibusdam!
-                    </p>
-                </div>
-            </div>
-
-            <div class="card">
-                <i class="fas fa-female"></i>
-                <h5> Her </h5>
-                <hr>
-                <div class="box-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias nemo ea corporis dicta hic recusandae unde magni, excepturi sed maxime 
-                        non repellat distinctio consequatur commodi quis saepe, voluptatibus velit!
-                    </p>
-                </div>
-            </div>
-
-            <div class="card">
-                <i class="fas fa-child"></i>
-                <h5> Kids </h5>
-                <hr>
-                <div class="box-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolo Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem rerum corporis dignissimos quam unde esse quos et
-                       aliquam tenetur. Enim asperiores necessitatibus eveniet ratione, tenetur nulla non eaque inventore?
-                    </p>
-                </div>
-            </div>
-
-        </div>
-    </div>
+    
 
     <footer>
         <p> Follow us on social media</p>
