--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 
                 <li>
-                    <a href="#"> Gallery </a>
+                    <a href="#contact-us" aria-label="go to contact us section"> Contact Us </a>
                 </li>
                 <li>
                     <a href="#gifts" aria-label="go to gifts section"> Gifts </a>
@@ -118,7 +118,7 @@
   
     </section>
 
-    <section class="contact-us">
+    <section id="contact-us">
         
             <h2>Contact us</h2>
         <form>
@@ -140,9 +140,9 @@
         <p>Phon number : 07307 574445</p>
         <p> Follow us on social media</p>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
         </div>
     </footer>
 
