--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section id="contact-us">
         
             <h2>Contact us</h2>
-        <form>
+        <form   method="POST" action="https://formdump.codeinstitute.net/">
             <input id="fname" type="text" name="first_name" placeholder="First Name" required>
             
             <input id="lname" type="text" name="last_name" placeholder="Second Name" required>
