Change the font family

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
@@ -84,7 +84,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
@@ -99,7 +99,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/assets/css/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
