Add images and text to gifts section

--- a/index.html
+++ b/index.html
@@ -62,19 +62,20 @@
     <section id="gifts">
         <div class="flip-main">
             <div class="gifts-title">
-                <h2>Gifts</h2>
+                <h2>Gifts For <span>Everybody</span></h2>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/men-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2> Him</h2>
-                                    <p>Lorem ipsum dolor sit amet c</p>
+                                    <h2>Gifts For <span>Him</span></h2>
+                                    <p>Gifts for men can be challenging. It can be difficult to find something he really likes and not just something 
+                                        that he says he likes. So, why not treat him with an experience he's sure to always remember?</p>
                                 </div>
                             </div>
                         </div>
@@ -84,12 +85,13 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/women-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2> Him</h2>
-                                    <p>Lorem ipsum dolor sit amet con</p>
+                                    <h2> Gifts For <span>Her</span></h2>
+                                    <p>If you're looking for something that she’ll always remember, go that extra mile and treat her with
+                                       an experience from our range of incredible gift ideas – tailored to all personality types and tastes.</p>
                                 </div>
                             </div>
                         </div>
@@ -99,12 +101,13 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/women-gift.jpg" alt="flip-card">
+                                <img src="assets/css/images/children-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2> Him</h2>
-                                    <p>Lorem ipsum dolor sit amet consec</p>
+                                    <h2> Gifts For <span>Children</span></h2>
+                                    <p>From little tykes to teenagers, we cover all types of youngsters with our incredible collection of gifts
+                                       ,let their imaginations run wild and adventurous side flourish!</p>
                                 </div>
                             </div>
                         </div>
