Add style to gifts section for max width 950ps and down

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header id="home">
             <h1 id="logo">Mosaic <span>Gifts</h1>
         
-        <nav id="menu">
-            <ul>
+        <nav>
+            <ul  id="menu">
                 
                 <li>
                     <a href="#contact-us" aria-label="go to contact us section"> Contact Us </a>
