Style inputs for screens 767px wide and down

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
                   <h3>Personalized <span>Gifts</span></h3>
                   <hr>
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio libero illo ad repellat
-                    quas ullam tenetur porro facilis quis dolorum labore culpa, cupiditate adipisci non maxime
-                    deserunt, ipsa dolores ratione!
+                    Gift-giving is a science to learn and an art to master. At Mosaic Gifts, we aim to inspire you with unique gift ideas
+                     for those all-important people in your life.
+                     We’ve got a little bit of everything to enjoy, with offers on experience days, novelty items, toys, games, treats, and more.
+                     Everything they (and you) want is right here.
+                     If you want to be the best giver, our team is here to give you the best ideas.
                   </p>
                   <a href="#contact-us" aria-label="go to contact us section"> Contact Us </a>
                 </div>
@@ -69,11 +71,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/men-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/men-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2>Gifts For <span>Him</span></h2>
+                                    <h3>Gifts For <span>Him</span></h3>
                                     <p>Gifts for men can be challenging. It can be difficult to find something he really likes and not just something 
                                         that he says he likes. So, why not treat him with an experience he's sure to always remember?</p>
                                 </div>
@@ -85,11 +87,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/women-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/women-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2> Gifts For <span>Her</span></h2>
+                                    <h3> Gifts For <span>Her</span></h3>
                                     <p>If you're looking for something that she’ll always remember, go that extra mile and treat her with
                                        an experience from our range of incredible gift ideas – tailored to all personality types and tastes.</p>
                                 </div>
@@ -101,11 +103,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/css/images/children-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/children-gifts.jpg" alt="flip-card">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
-                                    <h2> Gifts For <span>Children</span></h2>
+                                    <h3> Gifts For <span>Children</span></h3>
                                     <p>From little tykes to teenagers, we cover all types of youngsters with our incredible collection of gifts
                                        ,let their imaginations run wild and adventurous side flourish!</p>
                                 </div>
