--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/images/men-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/men-gifts.jpg" alt="A man holding a gift">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
@@ -90,7 +90,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/images/women-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/women-gifts.jpg" alt="A women holding a gift">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
@@ -105,7 +105,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="assets/images/children-gifts.jpg" alt="flip-card">
+                                <img src="assets/images/children-gifts.jpg" alt="Children holding gifts">
                             </div>
                             <div class="filp-card-back">
                                 <div class="text">
